--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,13 +1,16 @@
-{% extends 'base.html' %} {% block title %}
-<title>Login</title>
-{% endblock title %} {% block content %}
-<main>
-  <div>
-    <h1>Login</h1>
-    <form method="post">
-      {% csrf_token %} {{form.as_p}}
-      <button type="submit">Login</button>
-    </form>
-  </div>
-</main>
+{% extends 'base.html' %}
+
+{% block title %}
+    <title>Login</title>
+{% endblock title %}
+{% block content %}
+    <main>
+        <div>
+            <h1>Login</h1>
+            <form method="post">
+                {% csrf_token %} {{ form.as_p }}
+                <button type="submit">Login</button>
+            </form>
+        </div>
+    </main>
 {% endblock content %}
