--- a/projects/templates/projects/list.html
+++ b/projects/templates/projects/list.html
@@ -1,37 +1,54 @@
-{% extends 'base.html' %}
-
-{% block title %}
-    <title>Projects List</title>
-{% endblock title %}
-{% block content %}
-    <main>
-        <div>
-            <h1>My Projects</h1>
-            <p>
-                <a href="{% url 'create_project' %}">Create a new project</a>
-            </p>
-            {% if projects|length == 0 %}
-                <p>You are not assigned to any projects</p>
-            {% else %}
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Name</th>
-                            <th>Number of tasks</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for project in projects %}
-                            <tr>
-                                <td>
-                                    <a href="{% url 'show_project' project.id %}">{{ project.name }}</a>
-                                </td>
-                                <td>{{ project.tasks.all|length }}</td>
-                            </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-            {% endif %}
-        </div>
-    </main>
+{% extends 'base.html' %} {% load static %} {% block title %}
+<title>Projects List</title>
+{% endblock title %} {% block content %}
+<main>
+  <div>
+    <h1>My Projects</h1>
+    <p>
+      <a href="{% url 'create_project' %}">Create a new project</a>
+    </p>
+    {% if projects|length == 0 %}
+    <p>You are not assigned to any projects</p>
+    {% else %}
+    <table>
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Status</th>
+          <th>Number of tasks</th>
+          <th>Deadline</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for project in projects %}
+        <tr>
+          <td>
+            <a href="{% url 'show_project' project.id %}">{{ project.name }}</a>
+          </td>
+          <td>{{project.status}}</td>
+          <td>{{ project.tasks.all|length }}</td>
+          <td>{{ project.deadline }}</td>
+          <td>
+            {% for tag in project.tags.all%}
+            <button>
+              <a href=" {% url 'show_tagged_project' tag.id %} "
+                >{{tag.name}}</a>
+            </button>
+            {% endfor %}
+          </td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+    {% endif %}
+  </div>
+  <div class="tags">
+    <p>TAGS</p>
+    {% for tag in top_tags %}
+    <button>
+      <a href=" {% url 'show_tagged_project' tag.id %} ">{{tag.name}}</a>
+    </button>
+    {% endfor %}
+  </div>
+</main>
 {% endblock content %}
