Implement function to search for projects and tasks names

--- a/projects/templates/base.html
+++ b/projects/templates/base.html
@@ -66,8 +66,12 @@
 
     <!-- HEADER -->
     <div class="top_nav">
-      <div>
-        <p>search form</p>
+      <div class="search">
+        <form method="post" action="{% url 'show_search_results' %}">
+          {% csrf_token %}
+          <input type='search' placeholder='Search Projects or Tasks' name='searched'>
+          <button type="submit">Search</button>
+        </form>
       </div>
       <div>
         <img alt="user image" />
