--- a/projects/static/css/main.css
+++ b/projects/static/css/main.css
@@ -1,82 +1,92 @@
 .container {
-    margin: 0px;
-    padding: 0px;
-    display: grid;
-    grid-template-columns: repeat(9, 1fr);
-    grid-template-rows: auto;
-    min-height: 100vh;
-  }
+  margin: 0px;
+  padding: 0px;
+  display: grid;
+  grid-template-columns: repeat(9, 1fr);
+  grid-template-rows: auto;
+  min-height: 100vh;
+}
 
-  /* APPLY to ALL */
-  * {
-    box-sizing: border-box;
-  }
+/* APPLY to ALL */
+* {
+  box-sizing: border-box;
+}
 
-  li {
-    list-style: none;
-  }
+li {
+  list-style: none;
+}
 
-  a {
-    text-decoration: none;
-  }
+a {
+  text-decoration: none;
+}
 
-  /* Sidebar */
-  .side_nav {
-    grid-area: 1/1/12/3;
-    background-color: #e8edef;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
+/* Sidebar */
+.side_nav {
+  grid-area: 1/1/12/3;
+  background-color: #e8edef;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 
-  .side_nav button {
-    background-color: #dae8c7;
-  }
+.side_nav button {
+  background-color: #dae8c7;
+}
 
-  /* Header Nav */
-  .top_nav {
-    background-color: #ebf4df;
-    grid-area: 1/3/2/13;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
+/* Header Nav */
+.top_nav {
+  background-color: #ebf4df;
+  grid-area: 1/3/2/13;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
 
-  /* Middle Content */
-  .middle {
-    background-color: white;
-    grid-area: 2/3/5/13;
-    display: flex;
-    justify-content: space-around;
-  }
+/* Middle Content */
+.middle {
+  background-color: white;
+  grid-area: 2/3/5/13;
+  display: flex;
+  justify-content: space-around;
+}
 
-  .middle div {
-    background-color: #dae8c7;
-    margin: 2em;
-  }
+.middle div {
+  background-color: #dae8c7;
+}
 
-  /* Timeline */
-  .timeline {
-    background-color: #dae8c7;
-    grid-area: 5/3/7/13;
-  }
+td.jsCalendar-current {
+  background-color: green;
+  border-radius: 10em;
+}
 
-  /* Main Content */
-  main {
-    background-color: white;
-    grid-area: 7/3/12/13;
-    display: flex;
-    justify-content: space-between;
-  }
+#calendar table {
+  height: 1em;
+  flex-shrink: 1;
+  font-size: 1em;
+}
 
-  .tags {
-    background-color: #ebf4df;
-    display: inline-block;
-    width: 15%;
-  }
+/* Timeline */
+.timeline {
+  background-color: #dae8c7;
+  grid-area: 5/3/7/13;
+}
 
-  /* Footer */
-  /* footer {
+/* Main Content */
+main {
+  background-color: white;
+  grid-area: 7/3/12/13;
+  display: flex;
+  justify-content: space-between;
+}
+
+.tags {
+  background-color: #ebf4df;
+  display: inline-block;
+  width: 15%;
+}
+
+/* Footer */
+/* footer {
     background-color: black;
     grid-area: 12/1/13/13;
   } */
