--- a/projects/templates/base.html
+++ b/projects/templates/base.html
@@ -98,18 +98,25 @@
 
     <!-- BASE CONTENT -->
     <div class="middle">
-        <div id = "calendar"
-          class="auto-jsCalendar default-theme green"
-          data-navigator="false"
-          data-zero-fill="true"
-          data-month-format="month YYYY"
-          data-day-format="DD"
-          data-firstDayOfTheWeek="2"
-        ></div>
+      <div
+        id="calendar"
+        class="auto-jsCalendar default-theme green"
+        data-navigator="false"
+        data-zero-fill="true"
+        data-month-format="month YYYY"
+        data-day-format="DD"
+        data-firstDayOfTheWeek="2"
+      ></div>
       <div>
-        <p>Task Completed</p>
-        <p>Task Completed</p>
-        <p>Task Completed</p>
+        <div>
+          <p>{{ days_countdown }} days till {{ urgent_task.name }} due</p>
+        </div>
+        <div>
+          <p>Projects Completed {{completed_projects|length}}</p>
+        </div>
+        <div>
+          <p>Tasks Completed {{completed_tasks|length }}</p>
+        </div>
       </div>
       <div>
         <h2>Urgent Tasks</h2>
