--- a/projects/templates/base.html
+++ b/projects/templates/base.html
@@ -107,7 +107,7 @@
         data-day-format="DD"
         data-firstDayOfTheWeek="2"
       ></div>
-      <div>
+      {% comment %} <div>
         <div>
           <p>{{ days_countdown }} days till {{ urgent_task.name }} due</p>
         </div>
@@ -117,7 +117,9 @@
         <div>
           <p>Tasks Completed {{completed_tasks|length }}</p>
         </div>
-      </div>
+      </div> {% endcomment %}
+      {% block middle %}
+      {% endblock middle %}
       <div>
         <h2>Urgent Tasks</h2>
       </div>
