Stylize main page counter using CSS flexbox

--- a/projects/static/css/main.css
+++ b/projects/static/css/main.css
@@ -50,8 +50,29 @@ a {
   justify-content: space-around;
 }
 
-.middle div {
+.middle-right {
+  display: flex;
+  flex-direction: column;
+}
+
+.countdown {
+  display: flex;
+  gap: 2em;
+}
+
+.countdown div {
+  margin-top: 1em;
   background-color: #dae8c7;
+  border-radius: 1em;
+  padding: 1em;
+  text-align: center;
+}
+
+.countdown :nth-child(even) {
+  /* width: 40%; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 td.jsCalendar-current {
