--- a/projects/templates/projects/list.html
+++ b/projects/templates/projects/list.html
@@ -1,6 +1,15 @@
 {% extends 'base.html' %} {% load static %} {% block title %}
 <title>Projects List</title>
-{% endblock title %} {% block middle%}
+{% endblock title %}
+{% block user_image%}
+<img src="{{ user_avatar.avatar }}"/>
+{% endblock user_image%}
+
+{% block top_user_image %}
+<h4>{{user_avatar.user}}</h4>
+{% endblock top_user_image%}
+
+{% block middle%}
 <div class="middle-right">
   <div class="countdown">
     <div>
