--- a/projects/static/css/main.css
+++ b/projects/static/css/main.css
@@ -27,7 +27,13 @@ a:visited {
 .side_nav {
   grid-area: 1/1/12/3;
   /* background-color: #e8edef; */
-  background-image: linear-gradient(#e8e8e8,#e8e8e880, #f5efef50, #f2b48150, #f2b48130);
+  background-image: linear-gradient(
+    #e8e8e8,
+    #e8e8e880,
+    #f5efef50,
+    #f2b48150,
+    #f2b48130
+  );
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -131,23 +137,39 @@ a:visited {
 
 /* Header Nav */
 .top_nav {
-  background-color: #ebf4df;
   grid-area: 1/3/2/13;
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
+  align-items: center;
+  padding: 1em;
+  margin-bottom: 1em;
 }
 
-.top_user_image {
-  width: 20%;
-  height: 20%;
+.top_user h4 {
+  font-size: 0.8em;
 }
-
-.top_user_image img {
+.search_form {
+  display: flex;
   width: 100%;
-  height: 100%;
-  object-fit: fill;
-  border-radius: 50%;
+  align-items: center;
+}
+.search input {
+  background-color: #a1cb8830;
+  padding: 1em;
+  margin: 0em;
+  width: 50%;
+  height: 2em;
+  border-radius: 2em;
+  border: 0px;
+}
+
+.search button {
+  border: none;
+  background-color: white;
+  width: 3%;
+}
+.search_icon {
+  width: 100%;
 }
 
 /* Middle Content */
