--- a/projects/static/css/main.css
+++ b/projects/static/css/main.css
@@ -4,6 +4,7 @@
   grid-template-columns: repeat(9, 1fr);
   grid-template-rows: auto;
   min-height: 100vh;
+  background-color: #ececec60;
 }
 
 /* APPLY to ALL */
@@ -140,9 +141,9 @@ a:visited {
   grid-area: 1/3/2/13;
   display: flex;
   justify-content: space-between;
+  padding: 0em 1em 1em 1em;
   align-items: center;
-  padding: 1em;
-  margin-bottom: 1em;
+  background-color: #ececec60;
 }
 
 .top_user h4 {
@@ -154,7 +155,7 @@ a:visited {
   align-items: center;
 }
 .search input {
-  background-color: #a1cb8830;
+  background-color: white;
   padding: 1em;
   margin: 0em;
   width: 50%;
@@ -166,7 +167,7 @@ a:visited {
 .search button {
   border: none;
   background-color: white;
-  width: 3%;
+  width: 4%;
 }
 .search_icon {
   width: 100%;
@@ -187,22 +188,75 @@ a:visited {
 
 .countdown {
   display: flex;
-  gap: 2em;
+  gap: 1em;
 }
 
 .countdown div {
-  margin-top: 1em;
   background-color: #dae8c7;
   border-radius: 1em;
-  padding: 1em;
+  padding: 0.5em;
   text-align: center;
+  align-self: flex-end;
 }
 
-.countdown :nth-child(even) {
-  /* width: 40%; */
+.countdown img {
+  padding: 0em;
+  margin: 0em;
+  width: 3em;
+  align-self: flex-start;
+}
+div .middle_countdown {
+  padding: 0em 1.5em;
+  margin-top: -3em;
+  background-color: white;
+}
+
+.countdown1 {
   display: flex;
   flex-direction: column;
+  margin-top: 1em;
+  background: rgb(208, 114, 92);
+  background: radial-gradient(
+    circle,
+    rgba(208, 114, 92, 1) 1%,
+    rgba(218, 232, 199, 1) 90%
+  );
   justify-content: space-between;
+  box-shadow: 0px 4px 2px 0px rgba(0, 0, 0, 0.2);
+}
+
+.countdown1 h1 {
+  margin: 0em;
+  padding: 0em;
+  font-size: 3em;
+}
+.countdown1 span {
+  padding: 1em 2em;
+}
+
+.countdown2 {
+  background: rgb(200, 216, 219);
+  background: linear-gradient(
+    87deg,
+    rgba(200, 216, 219, 1) 0%,
+    rgba(218, 232, 199, 1) 70%
+  );
+  box-shadow: 0px 4px 2px 0px rgba(0, 0, 0, 0.2);
+}
+
+.countdown3 {
+  background: rgb(200, 216, 219);
+  background: linear-gradient(
+    252deg,
+    rgba(200, 216, 219, 1) 0%,
+    rgba(218, 232, 199, 1) 70%
+  );
+  box-shadow: 0px 4px 2px 0px rgba(0, 0, 0, 0.2);
+}
+
+.countdown1 p {
+  margin: 0em;
+  padding: 0em;
 }
 
 td.jsCalendar-current {
@@ -210,17 +264,19 @@ td.jsCalendar-current {
   border-radius: 10em;
 }
 
-#calendar table {
+/* #calendar table {
   height: 1em;
   flex-shrink: 1;
   font-size: 1em;
-}
+} */
 
 /* Timeline */
 .timeline {
   background-color: #dae8c7;
   grid-area: 5/3/7/13;
   text-align: center;
+  margin-right: 1em;
+  background-color: white;
 }
 
 /* Main Content */
