Fix countdown section sizing

--- a/projects/templates/projects/list.html
+++ b/projects/templates/projects/list.html
@@ -12,7 +12,7 @@
       <p>{{completed_projects|length}}</p>
       <p>Projects</p>
     </div>
-    <div class='middle_countdown'>
+    <div class="middle_countdown">
       <div class="countdown1">
         <img class="middle_icon" src="{% static 'media/image/time2.svg' %}" />
         <span>
