--- a/projects/static/css/main.css
+++ b/projects/static/css/main.css
@@ -43,6 +43,7 @@ a:visited {
   padding: 1em;
   padding-bottom: 0.3em;
   margin-right: 1em;
+  border-radius: 0em 2em 2em 0em;
 }
 
 .side_nav > div {
@@ -51,6 +52,7 @@ a:visited {
 
 .side_nav > div > h1 {
   margin: 0em auto;
+  font-size: 2em;
 }
 
 .side_image {
@@ -75,7 +77,7 @@ a:visited {
   margin: 0em;
   padding: 0em;
   padding-top: 2em;
-  font-size: 0.8em;
+  font-size: 1em;
   width: 100%;
   display: flex;
   justify-content: flex-end;
@@ -130,10 +132,10 @@ a:visited {
 }
 
 .sidebar_buttons p {
-  font-size: 0.8em;
+  font-size: 1em;
   margin: 0px;
   align-self: center;
-  margin-left: 3px;
+  margin-left: 6px;
 }
 
 /* Header Nav */
@@ -155,10 +157,10 @@ a:visited {
   align-items: center;
 }
 .search input {
-  background-color: white;
-  padding: 1em;
+  background-color: #ffffff;
+  padding: 1.2em 2em;
   margin: 0em;
-  width: 50%;
+  width: 55%;
   height: 2em;
   border-radius: 2em;
   border: 0px;
@@ -168,20 +170,19 @@ a:visited {
   border: none;
   background-color: #ececec60;
   width: 4%;
-  margin-left: 5px;
+  margin-left: 10px;
 }
 .search_icon {
-  width: 100%;
+  width: 80%;
 }
 
 /* Middle Content */
 .middle {
-  background-color: white;
+  background-color: #ffffff90;
   background-image: url("../media/image/Gardening-cuate.svg");
   background-repeat: no-repeat;
   background-size: 45%;
-  background-position: -1.6em -1em;
-
+  background-position: 1em -4.5em;
   grid-area: 2/3/5/13;
   display: flex;
   justify-content: space-around;
@@ -190,19 +191,24 @@ a:visited {
 .middle-right {
   display: flex;
   flex-direction: column;
+  /* align-items: center; */
+  justify-content: space-between;
+  width: 45%;
 }
 
 .countdown {
   display: flex;
   gap: 1em;
+  width: 100%;
+  /* margin-left: 4em; */
+  height: 80%;
 }
 
 .countdown div {
   background-color: #dae8c7;
   border-radius: 1em;
-  padding: 0.5em;
+  /* padding: 1.5em; */
   text-align: center;
-  align-self: flex-end;
 }
 
 .countdown img {
@@ -213,8 +219,11 @@ a:visited {
 }
 div .middle_countdown {
   padding: 0em 1.5em;
-  margin-top: -3em;
-  background-color: white;
+  margin-top: -2em;
+  background-color: #ffffff90;
+  width: 40%;
+  height: 90%;
+  box-shadow: 0px -9px 0px 0px rgba(0, 0, 0, 0.2);
 }
 
 .countdown1 {
@@ -229,6 +238,8 @@ div .middle_countdown {
   );
   justify-content: space-between;
   box-shadow: 0px 4px 2px 0px rgba(0, 0, 0, 0.2);
+  width: 100%;
+  height: 100%;
 }
 
 .countdown1 h1 {
@@ -241,6 +252,8 @@ div .middle_countdown {
 }
 
 .countdown2 {
+  margin-top: 1em;
+
   background: rgb(200, 216, 219);
   background: linear-gradient(
     87deg,
@@ -248,9 +261,12 @@ div .middle_countdown {
     rgba(218, 232, 199, 1) 70%
   );
   box-shadow: 0px 4px 2px 0px rgba(0, 0, 0, 0.2);
+  width: 25%;
+  height: 70%;
 }
 
 .countdown3 {
+  margin-top: 1em;
   background: rgb(200, 216, 219);
   background: linear-gradient(
     252deg,
@@ -258,6 +274,8 @@ div .middle_countdown {
     rgba(218, 232, 199, 1) 70%
   );
   box-shadow: 0px 4px 2px 0px rgba(0, 0, 0, 0.2);
+  width: 25%;
+  height: 70%;
 }
 
 .countdown1 p {
@@ -265,26 +283,33 @@ div .middle_countdown {
   padding: 0em;
 }
 
+.middle h4 {
+  margin: 0.5em;
+}
+
 td.jsCalendar-current {
-  background-color: #f9a15870;
+  background-color: #f9a158;
   border-radius: 10em;
 }
 #calendar {
-  margin-top: 1em;
-  background-color: #e8e8e820;
+  margin-left: 1em;
+  background-color: #e8e8e890;
   border-radius: 16px 16px;
+  padding: 1em 0.5em;
+  align-self: center;
 }
 
 .jsCalendar-title-name {
   text-align: center;
   padding: 8px;
+  font-size: 2em;
   margin-bottom: 0.5em;
-  border-radius: 16px 16px 5px 5px;
-  background-color: #e8e8e8;
+  border-radius: 16px;
+  background-color: #dae8c790;
 }
 
 #calendar td {
-  padding: 0em 0.2em;
+  padding: 0em 0.5em;
 }
 
 /* Timeline */
@@ -302,6 +327,7 @@ main {
   grid-area: 7/3/12/13;
   display: flex;
   justify-content: space-between;
+  padding: 1em;
 }
 
 .tags {
