--- a/projects/templates/projects/list.html
+++ b/projects/templates/projects/list.html
@@ -2,15 +2,19 @@
 <title>Projects List</title>
 {% endblock title %} {% block user_image%}
 <img src="{{ user_avatar.avatar }}" />
-{% endblock user_image%} {% block top_user_image %}
+{% endblock user_image%}
+{% block top_user_image %}
 <h4>{{user_avatar.user}}</h4>
-{% endblock top_user_image%} {% block middle%}
+{% endblock top_user_image%}
+{% block middle%}
 <div class="middle-right">
   <div class="countdown">
-    <div class="countdown2">
-      <p>Completed</p>
-      <p>{{completed_projects|length}}</p>
-      <p>Projects</p>
+    <div class="out_countdown">
+      <div class="countdown2">
+        <p>Completed</p>
+        <p>{{completed_projects|length}}</p>
+        <p>Projects</p>
+      </div>
     </div>
     <div class="middle_countdown">
       <div class="countdown1">
@@ -22,14 +26,16 @@
         <p>till {{ urgent_task.name }} due</p>
       </div>
     </div>
-    <div class="countdown3">
-      <p>Completed</p>
-      <p>{{completed_tasks|length }}</p>
-      <p>Tasks</p>
+    <div class="out_countdown">
+      <div class="countdown3">
+        <p>Completed</p>
+        <p>{{completed_tasks|length }}</p>
+        <p>Tasks</p>
+      </div>
     </div>
   </div>
   <div>
-    <h4>Note</h4>
+    <h4>Hello, {{user_avatar.user}}</h4>
   </div>
 </div>
 
