--- a/projects/static/css/main.css
+++ b/projects/static/css/main.css
@@ -3,7 +3,7 @@
   display: grid;
   grid-template-columns: repeat(9, 1fr);
   grid-template-rows: auto;
-  min-height: 100vh;
+  /* min-height: 100vh; */
   background-color: #ececec60;
 }
 
@@ -39,12 +39,13 @@ a:visited {
   flex-direction: column;
   justify-content: space-between;
   align-content: center;
-  gap: 1em;
+  gap: 1.5em;
   padding: 1em;
-  padding-bottom: 0.3em;
+  margin: 0.5em 0em;
   margin-right: 1em;
   border-radius: 0em 2em 2em 0em;
   box-shadow: 2px 3px 5px 0px rgba(0, 0, 0, 0.2);
+  position: sticky;
 }
 
 .side_nav > div {
@@ -103,7 +104,7 @@ a:visited {
   flex-direction: column;
   align-items: center;
   gap: 0.5em;
-  margin: 1em 0em;
+  margin: 2em 0em;
 }
 
 .sidebar_buttons a {
@@ -144,7 +145,7 @@ a:visited {
   grid-area: 1/3/2/13;
   display: flex;
   justify-content: space-between;
-  padding: 0em 1em 1em 1em;
+  padding: 1em 1em 1em 1em;
   align-items: center;
   background-color: #ececec60;
 }
@@ -194,7 +195,6 @@ a:visited {
 .middle-right {
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
   justify-content: space-between;
   width: 45%;
 }
@@ -329,14 +329,44 @@ main {
   background-color: white;
   grid-area: 7/3/12/13;
   display: flex;
-  justify-content: space-between;
+  margin-top: 1em;
+  padding: 2em;
+  gap: 3em;
+}
+
+/* main div {
+  background-color: #dae8c7;
+  border-radius: 16px;
   padding: 1em;
+} */
+
+.main_left {
+  width: 80%;
+  display: flex;
+}
+
+.create_project {
+  background-color: #f9a15840;
+  align-self: flex-start;
+  writing-mode: vertical-lr;
+  padding: 0.8em 0.5em 0.8em 0.2em;
+  border-radius: 10px 0em 0em 10px;
+  margin-top: 7%;
+  box-shadow: -1px -1px 1px 0px #80808070;
+}
+
+.project_list {
+  background-color: #dae8c7;
+  border-radius: 1em;
+  padding: 0em 1em;
 }
 
 .tags {
-  background-color: #ebf4df;
   display: inline-block;
-  width: 15%;
+  width: 20%;
+  background-color: #e8e8e870;
+  padding: 0em 1em;
+  border-radius: 1em;
 }
 
 /* Footer */
