--- a/projects/static/css/main.css
+++ b/projects/static/css/main.css
@@ -18,6 +18,7 @@ li {
 
 a {
   text-decoration: none;
+  color: black;
 }
 
 a:visited {
@@ -45,7 +46,6 @@ a:visited {
   margin-right: 1em;
   border-radius: 0em 2em 2em 0em;
   box-shadow: 2px 3px 5px 0px rgba(0, 0, 0, 0.2);
-  position: sticky;
 }
 
 .side_nav > div {
@@ -61,6 +61,7 @@ a:visited {
   width: 100%;
   height: 100%;
   object-fit: fill;
+  filter: saturate(0.8);
 }
 
 .top_image {
@@ -186,7 +187,7 @@ a:visited {
   background-repeat: no-repeat;
   background-size: 45%;
   background-position: -1em -5em;
-  grid-area: 2/3/5/13;
+  grid-area: 2/3/6/13;
   display: flex;
   justify-content: space-around;
   box-shadow: 1px -4px 2px 0px rgba(0, 0, 0, 0.2);
@@ -287,13 +288,13 @@ td.jsCalendar-current {
   border-radius: 10em;
 }
 #calendar {
-  margin-left: 1em;
+  /* margin-left: 1em; */
   background-color: #e8e8e890;
   border-radius: 16px 16px;
-  padding: 1em 0.5em;
+  /* padding: 1em 0.5em; */
   align-self: center;
   width: 25%;
-  height: 80%;
+  margin: 1.5em;
 }
 
 #calendar table {
@@ -317,28 +318,20 @@ td.jsCalendar-current {
 
 /* Timeline */
 .timeline {
-  background-color: #dae8c7;
-  grid-area: 5/3/7/13;
+  grid-area: 6/3/8/13;
   text-align: center;
-  margin-right: 1em;
   background-color: white;
 }
 
 /* Main Content */
 main {
-  background-color: white;
-  grid-area: 7/3/12/13;
+  background-color: #ececec60;
+  grid-area: 8/3/13/13;
   display: flex;
   margin-top: 1em;
-  padding: 2em;
-  gap: 3em;
+  padding: 1em 1em;
+  /* gap: 3em; */
 }
-
-/* main div {
-  background-color: #dae8c7;
-  border-radius: 16px;
-  padding: 1em;
-} */
 
 .main_left {
   width: 80%;
@@ -346,27 +339,81 @@ main {
 }
 
 .create_project {
-  background-color: #f9a15840;
-  align-self: flex-start;
+  margin-top: 4%;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
+  width: 3%;
+}
+
+.create_project div {
+  background-color: #f9a15890;
   writing-mode: vertical-lr;
   padding: 0.8em 0.5em 0.8em 0.2em;
-  border-radius: 10px 0em 0em 10px;
-  margin-top: 7%;
-  box-shadow: -1px -1px 1px 0px #80808070;
+  border-radius: 0px 8px 8px 0px;
+  box-shadow: 3px 3px 1px 0px #80808070;
+  width: 100%;
 }
 
 .project_list {
-  background-color: #dae8c7;
+  background-color: rgba(253, 251, 251, 0.861);
   border-radius: 1em;
-  padding: 0em 1em;
+  padding: 1.5em 1.5em;
+  width: 95%;
+}
+
+.project_list h1 {
+  margin-bottom: 1em;
+  font-size: 1.5em;
+}
+
+.project_list table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 1em;
+}
+
+.project_list td,
+.project_list th {
+  padding: 1em 1em;
+  text-align: start;
+  font-size: 1.2em;
+}
+
+.project_list th {
+  border-bottom: 1px solid #b0d39c;
+  margin-bottom: 1em;
+  background-color: #dae8c7;
+}
+
+.header_left {
+  border-radius: 8px 0em 0em 0em;
+}
+
+.header_right {
+  border-radius: 0em 8px 0em 0em;
+}
+
+.project_list tr {
+  border-bottom: 1px solid #a6a3a340;
+}
+
+.main-right {
+  width: 20%;
 }
 
 .tags {
-  display: inline-block;
-  width: 20%;
-  background-color: #e8e8e870;
-  padding: 0em 1em;
-  border-radius: 1em;
+  margin: 1em 1em 1em 0em;
+  background-color: #dae8c7;
+  border-radius: 8px;
+  padding: 1.5em;
+}
+.tags p {
+  font-size: 1.2em;
+}
+
+.tags button {
+  margin: 2px 0px;
 }
 
 /* Footer */
