Change web app's color scheme

--- a/projects/templates/base.html
+++ b/projects/templates/base.html
@@ -15,7 +15,7 @@
       <div>
         <img
           class="top_image"
-          src="{% static 'media/image/sharedgoals.svg' %}"
+          src="{% static 'media/image/sharedgoals2.svg' %}"
         />
         <h1>Projects Manager</h1>
       </div>
@@ -43,7 +43,7 @@
       <div>
         <img
           class="side_image"
-          src="{% static 'media/image/waterfall.svg' %}"
+          src="{% static 'media/image/waterfall2.svg' %}"
         />
       </div>
       <div class="side_bottom">
