--- a/projects/static/css/main.css
+++ b/projects/static/css/main.css
@@ -4,7 +4,12 @@
   grid-template-columns: repeat(9, 1fr);
   grid-template-rows: auto;
   /* min-height: 100vh; */
-  background-color: #ececec60;
+  background: linear-gradient(
+    184deg,
+    rgba(179, 236, 243, 0.1) 0%,
+    rgba(179, 236, 243, 0.5) 15%,
+    rgba(203, 203, 239, 0.9) 68%
+  );
 }
 
 /* APPLY to ALL */
@@ -29,13 +34,7 @@ a:visited {
 .side_nav {
   grid-area: 1/1/12/3;
   /* background-color: #e8edef; */
-  background-image: linear-gradient(
-    #e8e8e880,
-    #e8e8e870,
-    #f5efef50,
-    #f2b48150,
-    #f2b48130
-  );
+  background: #ffffff70;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -61,7 +60,6 @@ a:visited {
   width: 100%;
   height: 100%;
   object-fit: fill;
-  filter: saturate(0.8);
 }
 
 .top_image {
@@ -110,7 +108,7 @@ a:visited {
 
 .sidebar_buttons a {
   border: none;
-  background-color: #b0d39c;
+  background-color: #90abda;
   padding: 0.2em 0.5em;
   width: 50%;
   border-radius: 24px;
@@ -148,7 +146,6 @@ a:visited {
   justify-content: space-between;
   padding: 1em 1em 1em 1em;
   align-items: center;
-  background-color: #ececec60;
 }
 
 .top_user h4 {
@@ -183,14 +180,15 @@ a:visited {
 /* Middle Content */
 .middle {
   background-color: #ffffff;
-  background-image: url("../media/image/Gardening-cuate.svg");
+  /* background-image: url("../media/image/Gardening-cuate.svg");
   background-repeat: no-repeat;
   background-size: 45%;
-  background-position: -1em -5em;
+  background-position: -1em -5em; */
   grid-area: 2/3/6/13;
   display: flex;
   justify-content: space-around;
   box-shadow: 1px -4px 2px 0px rgba(0, 0, 0, 0.2);
+  border-radius: 8px;
 }
 
 .middle-right {
@@ -219,7 +217,7 @@ a:visited {
 .countdown img {
   padding: 0em;
   margin: 0em;
-  width: 3em;
+  width: 45%;
   align-self: flex-start;
 }
 div .middle_countdown {
@@ -246,15 +244,18 @@ div .middle_countdown {
 .countdown1 {
   background: radial-gradient(
     circle,
-    rgba(208, 114, 92, 1) 1%,
-    rgba(218, 232, 199, 1) 90%
+    rgba(161, 172, 208, 1) 10%,
+    rgba(233, 226, 226, 1) 63%,
+    rgba(220, 228, 231, 1) 99%
   );
+
   width: 100%;
   height: 100%;
 }
 
 .countdown1 h1 {
   margin: 0em;
+  margin-top: -15%;
   padding: 0em;
   font-size: 3em;
 }
@@ -264,27 +265,19 @@ div .middle_countdown {
 }
 
 .countdown2 {
-  background: linear-gradient(
-    87deg,
-    rgba(200, 216, 219, 1) 0%,
-    rgba(218, 232, 199, 1) 70%
-  );
+  background: #b3c7df99;
   width: 100%;
   height: 100%;
 }
 
 .countdown3 {
-  background: linear-gradient(
-    252deg,
-    rgba(200, 216, 219, 1) 0%,
-    rgba(218, 232, 199, 1) 70%
-  );
+  background: #b3c7df99;
   width: 100%;
   height: 100%;
 }
 
 td.jsCalendar-current {
-  background-color: #f9a158;
+  background-color: #969ecf;
   border-radius: 10em;
 }
 #calendar {
@@ -308,7 +301,7 @@ td.jsCalendar-current {
   font-size: 2em;
   margin-bottom: 0.5em;
   border-radius: 16px;
-  background-color: #dae8c790;
+  background-color: #e9e2e2;
 }
 
 #calendar td {
@@ -347,7 +340,7 @@ main {
 }
 
 .create_project div {
-  background-color: #f9a15890;
+  background-color: #90abda;
   writing-mode: vertical-lr;
   padding: 0.8em 0.5em 0.8em 0.2em;
   border-radius: 0px 8px 8px 0px;
@@ -360,6 +353,7 @@ main {
   border-radius: 1em;
   padding: 1.5em 1.5em;
   width: 95%;
+  overflow: scroll;
 }
 
 .project_list h1 {
@@ -383,7 +377,7 @@ main {
 .project_list th {
   border-bottom: 1px solid #b0d39c;
   margin-bottom: 1em;
-  background-color: #dae8c7;
+  background-color: #e9e2e2;
 }
 
 .header_left {
@@ -404,7 +398,7 @@ main {
 
 .tags {
   margin: 1em 1em 1em 0em;
-  background-color: #dae8c7;
+  background-color: #b8cbec99;
   border-radius: 8px;
   padding: 1.5em;
 }
